--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.31.7"
+    "autoprefixer": "^10.4.12",
+    "eslint-plugin-react": "^7.31.7",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
